# cbs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
migrations/2021-03-15-211332_init/: down.sql  up.sql
migrations/2021-06-25-193640_supporters/: down.sql  up.sql
src/: database.rs  lib.rs  mailer.rs  mailer_errors.rs  main.rs  routes.rs  schema.rs  tests.rs
src/database/: daos.rs  models.rs
src/database/daos/: bike.rs  challenge.rs  rent.rs  supporter.rs
src/routes/: bike.rs  challenge.rs  error.rs  errors.rs  rent.rs  supporter.rs
src/tests/database/daos/: bike.rs  challenge.rs  rent.rs
tests/: bike.rs  challenge.rs  rent.rs
