[package]
name = "cargobike_share_backend"
version = "0.3.0"
authors = ["Hagen Schink <hagen.schink@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cargobike_share_backend"
path = "src/lib.rs"

[[bin]]
name = "cargobike_share_backend"
path = "src/main.rs"

[dependencies]
rocket = "0.4.6"
log = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "uuid", "chrono"] }
#diesel_migrations = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde"] }
regex = "1"
lazy_static = "1"
lettre = "0.10.0-rc.3"
mocktopus = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]